--- a/index.css
+++ b/index.css
@@ -30,11 +30,40 @@ hr.style1:after {
 }
 
 
-hr.style2 { 
-  border: 0; 
-  height: 1px; 
+hr.style2 {
+  border: 0;
+  height: 1px;
   background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
   background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
   background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
+  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+}
+
+body {
+  back
+}
+
+.top-nav {
+  height: 15%;
+}
+
+.footer {
+  height: 10%;
+  color: #232425;
+  background-color: #FFFFFF;
+  bottom: 0px;
+}
+
+.status p{
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  color: #232425;
+}
+
+.coming-soon p {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: normal;
+  font-size: 70px;
+  top: 25px;
 }
