centered content vertically and horizontally and logo size reduced

--- a/index.css
+++ b/index.css
@@ -39,16 +39,17 @@ hr.style2 {
   background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
 }
 
-body {
-  back
+.mid-statement {
+  background-image: url(assets/images/cs-background.png)
 }
 
-.top-nav {
-  height: 15%;
+.logo img{
+  margin-top : 20px;
+  width: 12%;
 }
 
-.footer {
-  height: 10%;
+.footer-text {
+  height: 6%;
   color: #232425;
   background-color: #FFFFFF;
   bottom: 0px;
@@ -59,6 +60,7 @@ body {
   font-weight: 500;
   font-size: 24px;
   color: #232425;
+  margin-top: 16%;
 }
 
 .coming-soon p {
@@ -66,4 +68,7 @@ body {
   font-weight: normal;
   font-size: 70px;
   top: 25px;
+  color: #8dc63f;
+  margin-bottom: 16%;
 }
+
