--- a/index.css
+++ b/index.css
@@ -49,10 +49,27 @@ hr.style2 {
 }
 
 .footer-text {
-  height: 6%;
+  height: 10%;
   color: #232425;
-  background-color: #FFFFFF;
+  background-color: #000;
   bottom: 0px;
+  background-color: #232425;
+}
+
+.footer-text p {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
+  font-size: 15px;
+  color: #cccccc;
+  margin-top: 1%;
+}
+
+.footer-text a:link {
+  color: #00adee;
+}
+
+.footer-text a:hover {
+  text-decoration: underline;
 }
 
 .status p{
@@ -60,15 +77,14 @@ hr.style2 {
   font-weight: 500;
   font-size: 24px;
   color: #232425;
-  margin-top: 16%;
+  margin-top: 13%;
 }
 
 .coming-soon p {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: normal;
   font-size: 70px;
-  top: 25px;
   color: #8dc63f;
-  margin-bottom: 16%;
+  margin-bottom: 13%;
 }
 
