--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -34,6 +34,7 @@
 
 .logos img.large {
   display: block;
+  filter: grayscale(100%);
   -webkit-filter: grayscale(100%);
   -moz-filter: grayscale(100%);
   -ms-filter: grayscale(100%);
