removed text-decoration in footer

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -228,6 +228,11 @@ footer ul {
   padding: 0;
 }
 
+footer ul li a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
 footer ul li a {
   color: #9B9B9B;
   text-transform: uppercase;
