--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -58,6 +58,7 @@
 .section-title {
   font-family: Raleway;
   color: #252525;
+  padding-top: 10px;
   letter-spacing: 3px;
   text-align: center;
 }
@@ -98,12 +99,14 @@
 
 #wrapper {
   padding-left: 0;
+  transition: all 0.5s ease;
 }
 
 #page-content-wrapper {
   z-index: 2;
   width: 100%;
   position: relative;
+  transition: all 0.5s ease;
 }
 
 element.style {
@@ -114,7 +117,12 @@ element.style {
   opacity: 1;
 }
 
-#home1 {
+#demo {
+  padding-bottom: 100px;
+  margin-bottom: 100px;
+}
+
+#home0 {
   background: url("../images/goride-drivers.jpg") no-repeat center center;
   background-size: cover;
   background-attachment: fixed;
@@ -276,7 +284,7 @@ main .content {
 #careers h1 {
   color: #fff;
   text-align: center;
-  font-family: Roboto,sans-serif;
+  font-family: Raleway,sans-serif;
   padding-top: 10px;
   margin-bottom: 1em;
 }
