--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -58,7 +58,6 @@
 .section-title {
   font-family: Raleway;
   color: #252525;
-  padding-top: 10px;
   letter-spacing: 3px;
   text-align: center;
 }
@@ -99,14 +98,12 @@
 
 #wrapper {
   padding-left: 0;
-  transition: all 0.5s ease;
 }
 
 #page-content-wrapper {
   z-index: 2;
   width: 100%;
   position: relative;
-  transition: all 0.5s ease;
 }
 
 element.style {
@@ -117,12 +114,7 @@ element.style {
   opacity: 1;
 }
 
-#demo {
-  padding-bottom: 100px;
-  margin-bottom: 100px;
-}
-
-#home0 {
+#home1 {
   background: url("../images/goride-drivers.jpg") no-repeat center center;
   background-size: cover;
   background-attachment: fixed;
@@ -277,14 +269,13 @@ main .content {
 }
 
 #careers {
-  float: left;
   text-align: justify;
 }
 
 #careers h1 {
   color: #fff;
   text-align: center;
-  font-family: Raleway,sans-serif;
+  font-family: Roboto,sans-serif;
   padding-top: 10px;
   margin-bottom: 1em;
 }
@@ -324,4 +315,13 @@ ol, ul {
 #careers .role ul.patterns li {
   list-style-type: circle;
   list-style-position: inside;
+}
+
+.btn {
+  text-align: left;
+  width: 20%;
+}
+
+.button-padding {
+  margin-bottom: 10px;
 }
