Document css color palette

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,12 @@
+/**
+ * Color palette
+ *
+ * GO-JEK Green - #08bc53
+ * GO-JEK Grey - #242424
+ * Heading - #252525
+ * Footer links - #9B9B9B
+ */
+
 .main-logo {
   max-width: 20%;
   height: auto;
